--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -8,6 +8,6 @@
 <h3>About Time</h3>
 <p>A beautiful love story about family, and the importance of making the most of every day.</p>
 <h3>Braveheart</h3>
-<p>A tale of Scottish heart and bravery, against oppressors.</p>
+<p>A tale of Scottish heart and bravery, and standing up against oppressors.</p>
 <h3>Domino</h3>
 <p>Keira Knightly straight kicking some ass.</p>
