--- a/public/resume.html
+++ b/public/resume.html
@@ -4,6 +4,37 @@
         <meta charset="UFT-8">
         <title>Resume</title>
     </head>
+    <h1>Nicola Donaldson</h1>
+    <h2>Impact</h2>
+    <ul>
+        <li>✅ <b>Operational Cost-Savings: </b>I identified and owned a product improvement, achieving annual operational cost-savings of over $50,000 and reducing related support tickets by over 80%. From gathering business requirements to coordinating with engineering, I shaped and shipped changes within weeks. </li>
+        <li>✅ <b>Design Process Leadership:</b> I led the end-to-end design process for a $127,000 statement of work. First collaborating with product and engineering on requirements, before leading stakeholders through iterative designs, usability testing, and successful customer handover/ training and acceptance. </li>
+        <li>✅ <b>Proactive Team Support:</b> I proactively supported my team and business in various capacities - shaping and scoping 'slices' of upcoming squad work, QA, as engineering’s edge-case first-responder, and advocating for / writing event-listener tracking for Google Analytics. I'm also learning HTML and CSS in my free time via Udemy to further align my language with devs. </li>
+        <li>✅ <b>Customer Research Expertise:</b> Engaging in customer research, I prepared, conducted, and analyzed customer interviews and user testing, utilizing tools like Dovetail to manage findings. I'm eager to explore marketing release methods and go-to-market communications. </li>
+        <li>✅ <b>Project Coordination Skills:</b> At Fujifilm my project coordination skills shone managing 40+ Salespeople to gather location information for 1,400 machines, and coordinating a nationwide business rebrand. I also assisted in workshop design, facilitation, and training of 30 people in user research strategies and ethics. Key skills gained were tracking budgets, actions, and risk registers, leading from behind, and a renewed joy in wearing multiple hats.</li>
+    </ul>
+    <h3>Education</h3>
+    <ul>
+        <li>Career Foundry - 2018</li>
+        <li>BEd Hons (First Class) - 2015</li>
+        <li>PGDip Tcgh. Secondary - 2014</li>
+        <li>BA/BSc (Psychology/Biology) - 2013</li>
+    </ul>
+
+    <h3>Work History</h3>
+    <ul>
+        <li>Modica Group - Senior UX/UI Designer - 2022 to present</li>
+        <li>Cin7 - UX/UI Designer - 2021 to 2022</li>
+        <li>School of Life: Became a Mum - 2021</li>
+        <li>FujiFilm Business Innovation - Jnr UX/UI then UX/UI - 2018 - 2020</li>
+    </ul>
+
+    <h4>Other Stuff</h4>
+    <ul>
+        <li><a href="https://nicoladonaldson.com">UX Work</a></li>
+        <li><a href="https://www.nicoladonaldson.com/contact">Contact</a> </li>
+        
+    </ul>
 </html>
 
      
