--- a/public/about.html
+++ b/public/about.html
@@ -2,3 +2,5 @@
 <p>I'm a Senior UX/UI Designer who enjoys solving complex enterprise (SaaS, CPaaS, B2B, B2C) problems for end-customers and internal staff.</p>
 
 <p>I used to be a high school science and biology teacher. I have the patience of a saint. Sales people don't scare me.</p>
+<br>
+<a href="../index.html">Back</a>
