--- a/public/contact.html
+++ b/public/contact.html
@@ -1,3 +1,5 @@
 <h1>Contact Me</h1>
 <p>Tel: +64 21 26 888 22</p>
 <p>Email: nicola.donaldson.ux@gmail.com</p>
+<br>
+<a href="../index.html">Back</a>
