--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -11,3 +11,5 @@
 <p>A tale of Scottish heart and bravery, and standing up against oppressors.</p>
 <h3>Domino</h3>
 <p>Keira Knightly straight kicking some ass.</p>
+<br>
+<a href="../index.html">Back</a>
