--- a/public/resume.html
+++ b/public/resume.html
@@ -33,8 +33,9 @@
     <ul>
         <li><a href="https://nicoladonaldson.com">UX Work</a></li>
         <li><a href="https://www.nicoladonaldson.com/contact">Contact</a> </li>
-        
     </ul>
+    <br>
+<a href="../index.html">Back</a>
 </html>
 
      
