--- a/public/about.html
+++ b/public/about.html
@@ -1,6 +1,25 @@
-<h1>About Me</h1>
-<p>I'm a Senior UX/UI Designer who enjoys solving complex enterprise (SaaS, CPaaS, B2B, B2C) problems for end-customers and internal staff.</p>
+<!DOCTYPE html>
+<html>
+     <head>   
+        <meta charset="UFT-8">
+        <title>About</title>
+    </head>
+    <body>
+        <h1>About Me</h1>
+        <p>I'm a Senior UX/UI Designer who enjoys solving complex enterprise (SaaS, CPaaS, B2B, B2C) problems for end-customers and internal staff.</p>
+        <p>I used to be a high school science and biology teacher. I have the patience of a saint. Sales people don't scare me.</p>
+        <br />
+        <p><a href="../index.html">Back</a></p>
+    </body>
+</html>
 
-<p>I used to be a high school science and biology teacher. I have the patience of a saint. Sales people don't scare me.</p>
-<br>
-<a href="../index.html">Back</a>
+<!DOCTYPE html>
+<html>
+     <head>   
+        <meta charset="UFT-8">
+        <title>About</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
