--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,15 +1,21 @@
-<!-- Write your code below -->
-<h1>Best 3 Movies (According to Nic)</h1>
+<!DOCTYPE html>
+<html>
+     <head>   
+        <meta charset="UFT-8">
+        <title>About</title>
+    </head>
+    <body>
+        <h1>Best 3 Movies (According to Nic)</h1>
 
-<h2>My  favourite movies.</h2>
-
-<hr />
-
-<h3>About Time</h3>
-<p>A beautiful love story about family, and the importance of making the most of every day.</p>
-<h3>Braveheart</h3>
-<p>A tale of Scottish heart and bravery, and standing up against oppressors.</p>
-<h3>Domino</h3>
-<p>Keira Knightly straight kicking some ass.</p>
-<br>
-<a href="../index.html">Back</a>
+        <h2>My  favourite movies.</h2>
+        <hr />
+        <h3>About Time</h3>
+        <p>A beautiful love story about family, and the importance of making the most of every day.</p>
+        <h3>Braveheart</h3>
+        <p>A tale of Scottish heart and bravery, and standing up against oppressors.</p>
+        <h3>Domino</h3>
+        <p>Keira Knightly straight kicking some ass.</p>
+        <br />
+        <p><a href="../index.html">Back</a></p>
+    </body>
+</html>
