--- a/public/resume.html
+++ b/public/resume.html
@@ -34,8 +34,8 @@
         <li><a href="https://nicoladonaldson.com">UX Work</a></li>
         <li><a href="https://www.nicoladonaldson.com/contact">Contact</a> </li>
     </ul>
-    <br>
-<a href="../index.html">Back</a>
+    <br />
+    <p><a href="../index.html">Back</a></p>
 </html>
 
      
