--- a/public/contact.html
+++ b/public/contact.html
@@ -1,5 +1,14 @@
-<h1>Contact Me</h1>
-<p>Tel: +64 21 26 888 22</p>
-<p>Email: nicola.donaldson.ux@gmail.com</p>
-<br>
-<a href="../index.html">Back</a>
+<!DOCTYPE html>
+<html>
+     <head>   
+        <meta charset="UFT-8">
+        <title>Contact</title>
+    </head>
+    <body>
+        <h1>Contact Me</h1>
+        <p>Tel: +64 21 26 888 22</p>
+        <p>Email: nicola.donaldson.ux@gmail.com</p>
+        <br />
+        <p><a href="../index.html">Back</a></p>
+    </body>
+</html>
